Se avanzó el diseño body, pero hay detalles por resolver como el uso de gap para la distribución de los bloques

--- a/front/src/scss/layout/_header.scss
+++ b/front/src/scss/layout/_header.scss
@@ -1,8 +1,8 @@
 .header{
-  position: fixed;
-  
-  width: 100%;
 
+  position: fixed;
+  width: 100%;
+  grid-column: 1/2;
   display: flex;
   flex-direction: row;
   background-image: url('../assets/FONDO1.jpg');
@@ -10,26 +10,31 @@
   z-index: 100;
 
   &__burgerBox {
+
     cursor: pointer;
     height: 4rem;
     width: 4rem;
     
     &:hover .header__burger {
+
       color: #eee;
     }
     
     @include respondMin(tablet) {
+
       display: none;
+
     }
   }
   
   &__burger {
+
     width: 4rem;
     height: .5rem;
     color: black;
     background-color: currentColor;
-    
     position: absolute;
+    
     @include centerY();
     
     transition: all .2s;
