--- a/front/src/scss/pages/_dashboard.scss
+++ b/front/src/scss/pages/_dashboard.scss
@@ -1,7 +1,7 @@
 .dashboard {
   display: grid;
+  grid-template-columns:repeat (2, 1fr) ;
   grid-template-rows: repeat(3, min-content);
-  
   @include respondMin(tablet) {
     grid-template-rows: repeat(4, min-content);
   }
