--- a/front/src/scss/pages/_media-queries.scss
+++ b/front/src/scss/pages/_media-queries.scss
@@ -1,4 +1,4 @@
-@mixin tablet{
+/* @mixin tablet{
     @media screen and (max-width: 620px){
         @content;
     }
@@ -8,5 +8,5 @@
     @media screen and (max-width: 280px){
         @content;
     }
-}
+} */
 
